--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "main": "index.js",
   "scripts": {
     "dev": "next dev",
-    "lint:eslint": "next lint --dir ."
+    "lint:eslint": "next lint --dir .",
+    "lint:prettier": "prettier . -c",
+    "lint:prettier:fix": "prettier . --write"
   },
   "keywords": [],
   "author": "",
@@ -20,6 +22,8 @@
     "@types/react": "19.1.9",
     "eslint": "9.32.0",
     "eslint-config-next": "15.4.5",
+    "eslint-config-prettier": "^10.1.8",
+    "prettier": "^3.6.2",
     "typescript": "5.9.2"
   }
 }
