--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   "description": "",
   "dependencies": {
     "@tailwindcss/postcss": "^4.1.11",
+    "gray-matter": "^4.0.3",
     "next": "^15.4.5",
     "postcss": "^8.5.6",
     "react": "^19.1.1",
