--- a/package.json
+++ b/package.json
@@ -7,6 +7,8 @@
     "lint:eslint": "next lint --dir .",
     "lint:prettier": "prettier . -c",
     "lint:prettier:fix": "prettier . --write",
+    "test": "jest --runInBand",
+    "test:watch": "jest --runInBand --watchAll",
     "prepare": "husky"
   },
   "keywords": [],
@@ -24,6 +26,8 @@
     "tailwindcss": "^4.1.11"
   },
   "devDependencies": {
+    "@faker-js/faker": "^9.9.0",
+    "@types/jest": "^30.0.0",
     "@types/node": "24.1.0",
     "@types/react": "19.1.9",
     "daisyui": "^5.0.50",
@@ -31,7 +35,9 @@
     "eslint-config-next": "15.4.5",
     "eslint-config-prettier": "^10.1.8",
     "husky": "^9.1.7",
+    "jest": "^30.0.5",
     "prettier": "^3.6.2",
+    "ts-node": "^10.9.2",
     "typescript": "5.9.2"
   }
 }
