--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "@types/jest": "^30.0.0",
     "@types/node": "24.1.0",
     "@types/react": "19.1.9",
+    "concurrently": "^9.2.0",
     "daisyui": "^5.0.50",
     "eslint": "9.32.0",
     "eslint-config-next": "15.4.5",
