--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "lint:eslint": "next lint --dir .",
     "lint:prettier": "prettier . -c",
     "lint:prettier:fix": "prettier . --write",
-    "test": "jest --runInBand",
+    "test": "concurrently -n next,jest --hide next -k -s command-jest \"next dev\" \"jest --runInBand --verbose\"",
     "test:watch": "jest --runInBand --watchAll",
     "prepare": "husky"
   },
@@ -27,9 +27,11 @@
   },
   "devDependencies": {
     "@faker-js/faker": "^9.9.0",
+    "@types/async-retry": "^1.4.9",
     "@types/jest": "^30.0.0",
     "@types/node": "24.1.0",
     "@types/react": "19.1.9",
+    "async-retry": "^1.3.3",
     "concurrently": "^9.2.0",
     "daisyui": "^5.0.50",
     "eslint": "9.32.0",
