--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "lint:prettier:fix": "prettier . --write",
     "test": "concurrently -n next,jest --hide next -k -s command-jest \"next dev\" \"jest --runInBand --verbose\"",
     "test:watch": "jest --runInBand --watchAll",
-    "prepare": "husky"
+    "prepare": "husky",
+    "create-post": "tsx ./infra/scripts/create-post.script.ts"
   },
   "keywords": [],
   "author": "",
@@ -41,6 +42,7 @@
     "jest": "^30.0.5",
     "prettier": "^3.6.2",
     "ts-node": "^10.9.2",
+    "tsx": "^4.20.3",
     "typescript": "5.9.2"
   }
 }
